# ccxt_bot

./: .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml
.github/workflows/: docker-image.yml
ccxt_bot/: __init__.py  __main__.py
ccxt_bot/core/: config.py  logger.py  utils.py
ccxt_bot/trade/: base.py  bot.py  stragtegy.py  trader.py
tests/: test_trader.py
