[tool.poetry]
name = "ccxt-bot"
version = "0.1.0"
description = ""
authors = ["DoubleChuang <ethan9141@gmail.com>"]
readme = "README.md"
packages = [{include = "ccxt_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^10.4"
python-binance = "^1.0.17"
schedule = "^1.1.0"
pandas = "^1.5.3"
pandas-ta = "^0.3.14b0"
ta-lib = "^0.4.25"
requests = "^2.28.2"
ta = "^0.10.2"
python-decouple = "^3.8"
pydantic = "^1.10.5"
ccxt = "^2.9.8"



[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
